<resources>
    <string name="app_name">ReversISEC2</string>
    <string name="title_activity_pvs_ai_">PvsAI_Activity</string>
    <string name="JogarvsAI">"Play Against AI"</string>
    <string name="aiLevel">"AI Level:"</string>
    <string name="dumbAI">"Dumb AI"</string>
    <string name="smartAI">"Smart AI"</string>
    <string name="playAs">"Play with:"</string>
    <string name="whites">"Whites"</string>
    <string name="blacks">"Blacks"</string>
    <string name="startGame">"Start Game"</string>
    <string name="JogarvsAmigoLocal">"Player vs Player Locally"</string>
    <string name="localPlayer">"Home Player"</string>
    <string name="GuestPlayer">"Guest Player"</string>
    <string name="seeProfile">"See Profile"</string>
    <string name="AiWhites">"Level of White AI:"</string>
    <string name="AiBlacks">"Level of Black AI:"</string>
    <string name="changeProfilePic">"Take new photo"</string>
    <string name="viewPastGames">"View Past Games"</string>
    <string name="username">"Username"</string>
    <string name="changeUsername">"Change Username"</string>
    <string name="deleteProfile">"Delete Profile"</string>
    <string name="wonGames">"Games Won: "</string>
    <string name="lostGames">"Games Lost: "</string>
    <string name="newUsername">"New Username: "</string>
    <string name="cancel">"Cancel"</string>
    <string name="user">"User"</string>
    <string name="connect">"Connect"</string>
    <string name="server">"Be a server"</string>
    <string name="hintIP">"Specifiy the IP..."</string>
    <string name="yourIP">"Your IP is:</string>
    <string name="networkPlayBtn">Play vs Friend in Network</string>
    <string name="gameEnded">Game Finished!</string>
    <string name="won">won!</string>
    <string name="itsADraw">It\'s a draw!</string>
    <string name="WaitingConnection">Waiting for connection...</string>
    <string name="typeIP">Type your friend\'s IP...</string>
    <string name="yourIPis">Your IP is:</string>
    <string name="seeSavedGames">See Saved Games</string>
    <string name="chooseFile">Choose file</string>
    <string name="prev"><![CDATA[<-]]></string>
    <string name="next"><![CDATA[->]]></string>
    <string name="jogar_outra_vez">Play Again</string>
    <string name="passar_jogada">Pass Turn</string>
</resources>
